Add mouse tracking, test particle emitter

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-  <canvas id="ceaseless-battle"></canvas>  
+  <canvas id="ceaseless-battle" style="cursor: none;"></canvas>  
 </body>
 </html>
