Prepare for github pages

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <script type="text/javascript" src="./bundle.js"></script>
+  <script type="text/javascript" src="./javascript/bundle.js"></script>
   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
 <body>
-  <canvas id="ceaseless-battle" style="cursor: none;"></canvas>  
+  <canvas id="ball-popcalypse" style="cursor: none;"></canvas>  
 </body>
 </html>
