Add infinite linear collision detection for beam, please refactor into bounded boxes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script type="text/javascript" src="./javascript/bundle.js"></script>
   <link rel="stylesheet" href="stylesheets/index.css">
 </head>
-<body>
+<body id="root">
   <canvas id="ball-popcalypse" style="cursor: none;"></canvas>  
 </body>
 </html>
