Update index.html to support favicons on Github Pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ball-popcalypse</title>
   <script type="text/javascript" src="./javascript/bundle.js"></script>
   <link rel="stylesheet" href="stylesheets/index.css">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body id="root">
   <canvas id="ball-popcalypse" style="cursor: none;"></canvas>  
