Add SEO description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ball-popcalypse</title>
+  <meta name=”description” content=”Top-down zombie-horde shooter game requiring quick reactions to avoid being overwhelmed. Built on vanilla JavaScript and HTML5 Canvas.”>
   <script type="text/javascript" src="./javascript/bundle.js"></script>
   <link rel="stylesheet" href="stylesheets/index.css">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
